--- a/Perlin Noise/Perlin Noise.vcxproj.filters
+++ b/Perlin Noise/Perlin Noise.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="pch.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="NoiseCreator.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Perlin Noise.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="NoiseCreator.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
