Various octaves at once, extracted class

--- a/Perlin Noise/Perlin Noise.vcxproj
+++ b/Perlin Noise/Perlin Noise.vcxproj
@@ -159,10 +159,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="NoiseCreator.h" />
+    <ClInclude Include="Octave.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NoiseCreator.cpp" />
+    <ClCompile Include="Octave.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
