--- a/Perlin Noise/Perlin Noise.vcxproj.filters
+++ b/Perlin Noise/Perlin Noise.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="NoiseCreator.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="Octave.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -30,6 +33,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="NoiseCreator.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Octave.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
