--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*.txt
 
 # Created by https://www.gitignore.io/api/c++,windows,visualstudio
 # Edit at https://www.gitignore.io/?templates=c++,windows,visualstudio
