--- a/Perlin Noise/Perlin Noise.vcxproj
+++ b/Perlin Noise/Perlin Noise.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="NoiseCreator.h" />
     <ClInclude Include="Octave.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Signal.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NoiseCreator.cpp" />
@@ -176,6 +177,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Perlin Noise.cpp" />
+    <ClCompile Include="Signal.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
